--- a/package.json
+++ b/package.json
@@ -2,27 +2,37 @@
   "name": "electron-vued",
   "version": "0.1.0",
   "private": true,
+  "main": "./electron-main/runner.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "electron-dev": "electron ./",
+    "electron-prod": "cross-env NODE_ENV=production electron ./",
+    "dev-run": "concurrently --kill-others \"npm run serve\" \"npm run electron-dev\"",
+    "prod-run": "npm run build && npm run electron-prod"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "core-js": "~3.6.5",
+    "vue": "~2.6.11",
+    "vue-class-component": "~7.2.3",
+    "vue-electron": "~1.0.6",
+    "vue-property-decorator": "~8.4.2",
+    "vue-router": "~3.2.0",
+    "vued-electron": "~3.0.2",
+    "vuex": "~3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-typescript": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "@types/node": "~12.12.40",
+    "@vue/cli-plugin-babel": "~4.3.1",
+    "@vue/cli-plugin-router": "~4.3.1",
+    "@vue/cli-plugin-typescript": "~4.3.1",
+    "@vue/cli-plugin-vuex": "~4.3.1",
+    "@vue/cli-service": "~4.3.1",
+    "concurrently": "^5.2.0",
+    "electron": "~9.0.0",
+    "sass": "~1.26.5",
+    "sass-loader": "~8.0.2",
+    "typescript": "~3.9.2",
+    "vue-template-compiler": "~2.6.11"
   }
 }
